Setup style page

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -162,7 +162,8 @@
 <script>
   // Define check template
   let LAVETIR = {};
-  LAVETIR.templateName = "{{ template.name }}";  
+  LAVETIR.templateName = "{{ template.name }}"; 
+  LAVETIR.templateSuffix = "{{ template.suffix }}";
 </script> 
 <script src="//d1liekpayvooaz.cloudfront.net/apps/customizery/customizery.js?shop={{shop.permanent_domain}}"></script>   
 <!-- Global site tag (gtag.js) - Google Ads: 10924987721 -->
