--- a/templates/page.styles.liquid
+++ b/templates/page.styles.liquid
@@ -1,4 +1,4 @@
-<div class="page-width page-width--narrow page-content">
+<div class="page-width page-width--narrow page-content page-styles">
   {%- render 'breadcrumbs' -%}
   <header class="section-header">
     <h1 class="section-header__title">{{ page.title }}</h1>
