--- a/assets/newcustom.css.liquid
+++ b/assets/newcustom.css.liquid
@@ -340,3 +340,16 @@ button.close-modal img {
     padding-left: 5px;
   }
 }
+.product__photos{
+  position: relative;
+  z-index: 5;
+}
+.loader.lazy{
+   display: none;
+}
+.loader .circular-loader{
+  max-width: 200px;
+  left: 50%;
+  top:-10%;
+  margin-left: -50px;
+}
