--- a/snippets/product-images.liquid
+++ b/snippets/product-images.liquid
@@ -124,6 +124,13 @@
           </button>
         {%- endif -%}
       </div>
+
+      {%- comment -%} Add the cloading {%- endcomment -%}
+      <div class="loader">
+        <svg class="circular-loader"viewBox="25 25 50 50" >
+        <circle class="loader-path" cx="50" cy="50" r="20" fill="none" stroke="#e5e5e5" stroke-width="2" />
+        </svg>
+      </div>
     </div>
   </div>
 
