--- a/assets/newcustom.css.liquid
+++ b/assets/newcustom.css.liquid
@@ -353,3 +353,14 @@ button.close-modal img {
   top:-10%;
   margin-left: -50px;
 }
+.page__style-description .product-title{
+  text-align: left;
+  margin-top: 30px;
+
+  margin-bottom: 10px;
+  text-transform: capitalize;
+}
+.page__style-description .grid-product__price{
+  text-align: left;
+  margin-bottom: 15px;
+}
