--- a/assets/newcustom.css.liquid
+++ b/assets/newcustom.css.liquid
@@ -360,7 +360,7 @@ button.close-modal img {
   margin-bottom: 10px;
   text-transform: capitalize;
 }
-.page__style-description .grid-product__price{
+.page__style-description .product-block--price{
   text-align: left;
   margin-bottom: 15px;
 }
